@@ -1,3 +1,10 @@
+2004-01-16  John Dallaway  <jld@ecoscentric.com>
+
+	* configtool/standalone/wxwin/configtool.cpp: Prompt to save eCos
+	Configuration as necessary before building eCos.
+
+	* configtool/standalone/wxwin/mainwin.cpp: Update copyright notice.
+
 2003-08-13  John Dallaway  <jld@ecoscentric.com>
 
 	* configtool/common/common/build.cxx: More robust implementation for
